with Tatijana's correction hints

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 
     <header>
       <div class="nav-bar">
-        <div>
           <img id="logo" src="images/spotify-logo.png" alt="Spotify Logo">
-        </div>
         <nav>
           <ul>
             <li><a href="#">Premium</a></li>
@@ -25,16 +23,18 @@
       </div>
 
       <div id="big-image">
-        <div><h1>Music for everyone.</h1>
-        <p>Spotify is now free on mobile, tablet and computer. <br>Listen to the
-        right music, wherever you are.</p>
-      </div></div>
+        <div>
+          <h1>Music for everyone.</h1>
+          <p>Spotify is now free on mobile, tablet and computer. <br>Listen to the
+          right music, wherever you are.</p>
+        </div>
+      </div>
     </header>
 
     <section id="whats-on">
-      <div id="title">
+      <span id="title">  
         <h2>What’s on Spotify?</h2>
-      </div>
+      </span>
       <div id="benefits">
       <div class="benefit">
         <img src="images/music-icon.png" alt="music">
